--- a/css/style.css
+++ b/css/style.css
@@ -159,9 +159,12 @@ footer .copyright {
     border: 1px solid #black;
 }
 
-@media screen and (max-width: 576px) {
 
-    
+
+@media screen and (max-width: 576px) {
+    .plus {
+        background-color: red;
+    }
     
 
     
