--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ footer .teks1 {
 
 footer .copyright {
     
+    font-size: 11px;
     height: 50px;
     font-family: 'Montserrat';
     font-weight: 200;
@@ -105,6 +106,7 @@ footer .copyright {
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    color: #b7b7b7;
 
 }
 
@@ -162,9 +164,7 @@ footer .copyright {
 
 
 @media screen and (max-width: 576px) {
-    .plus {
-        background-color: red;
-    }
+    
     
 
     
