--- a/css/style.css
+++ b/css/style.css
@@ -26,13 +26,10 @@ body {
 
 
 .carousel-caption {
-    position: absolute;
-    height: 600px;
-    width: 450px;
-    margin-left: 120px;
-
+    height: 500px;
+    width: 500px;
+    margin-right: auto;
     text-align: left;
-
 }
 
 .carousel-caption span {
@@ -163,37 +160,74 @@ footer .copyright {
 
 
 
-@media screen and (max-width: 1366px) {
+@media only screen and (max-width: 1366px) {
 
-    .carousel-caption h1,
-    p,
-    .get {
-        margin-top: -10px !important;
-        margin-top: 50px;
+    .carousel-caption {
+        
+        height: auto;
+    }
+    .carousel-caption h1 {
+        margin-top: -70px !important;
+    }
+    .carousel-caption a {
+        margin-top: -10px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+
+    .carousel-caption {
+        height: auto;
+    }
+
+
+    .carousel-caption h1 {
+        font-size: 30px;
+        margin-top: -90px !important;
+    }
+    .carousel-caption p {
+        font-size: 20px;
+        margin-top: -10px;
+    }
+
+    .carousel-caption a {
+        margin-top: -10px;
+        margin-left: 10px;
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+    .carousel-caption {
+        height: auto;
+    }
+    .carousel-caption {
+        margin-top: -700px !important;
+    }
+    .carousel-caption h1 {
+        font-size: 25px;
+
     }
 
     .carousel-caption p {
-        margin-top: 10px;
+
+        font-size: 17px;
+    }
+
+    .carousel-caption a {
+        font-size: 15px;
+        margin-left: 10px;
     }
 }
 
-@media screen and (max-width: 1024px) {
 
-    .carousel-caption h1,
-    p,
-    .get {
-        margin-top: -10px !important;
+
+
+
+@media only screen and (max-width: 576px) {
+    .carousel-caption {
+        display: none;
     }
-}
-
-
-
-
-
-@media screen and (max-width: 576px) {
-
-
-
 
     .bread {
         margin-top: 200px;
